@@ -1,0 +1,22 @@
+\header{
+title= "Spacing";
+subtitle = "proofsheet"; 
+enteredby =	 "jcn";
+copyright =	 "public domain";
+TestedFeatures =	 "This file tests various spacings";
+}
+
+\version "0.1.7";
+
+\score{
+    \melodic{ 
+	c4 d e f
+	c4 d e [f8 f]
+	c4 d e f8 [f16 f]
+	c4 d e f8 f16 [f32 f]
+	c4 d e f8 f16 f32 [f64 f]
+    }
+    \paper {
+%	gourlay_maxmeasures = 4.0
+    }
+}
